<resources>
    <string name="app_name">Ибадати Исламия</string>
    <string name="app_name_caps">ИБАДАТИ ИСЛАМИЯ</string>
    <string name="qt">Question text</string>
    <string name="bismillah_arabic">بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ</string>
    <string name="bismillah">БИСМИЛЛАҲИР РОҲМАНИР РОҲИЙМ</string>
    <string name="last_read">Ақырғы оқылған</string>
    <string name="search_by_topic">Тема бойынша излеў</string>
    <string name="search_by_questions">Сораўлар бойынша излеў</string>
    <string name="question_title">Сораў:</string>
    <string name="answer_title">Жуўап:</string>
    <string name="change_theme">Теманы өзгертиў</string>
    <string name="change_text_size">Текст өлшемин өзгертиў</string>
    <string name="charA">Ә</string>
    <string name="charG">Ғ</string>
    <string name="charH">Ҳ</string>
    <string name="charQ">Қ</string>
    <string name="charN">Ң</string>
    <string name="charO">Ө</string>
    <string name="charU">Ү</string>
    <string name="charW">Ў</string>
    <string name="small">Киши</string>
    <string name="normal">Орташа</string>
    <string name="large">Үлкен</string>
    <string name="extra_large">Жүдә үлкен</string>
    <string name="about_book_title">КИТАП ҲАҚҚЫНДА</string>
    <string name="about_author_title">АВТОР ҲАҚҚЫНДА</string>
    <string name="about_author"><b>Аҳмад Ҳәдий Мақсудий</b> 1868-жылы 28-сентябрьде Қазан уездиндеги Тассуў аўылында зыялылар шаңарағында дүньяға келген.<p>Оның  билимли, зыялы болыўын қәлеген әкеси Низамиддин жаслайынан-ақ, Қазандағы «Қосимия» медресесине оқыўға жиберди. Бул дәргайда 10 жыл оқығаннан соң сол замманның алдынғы адамы Исмаил Ғаспиралийдиң оқытыў усылы бойынша «Муаллими әўўал» китабын жазды. Жүдә кең тарқалған бул сабақлықтан татарлардан тысқары түркий халықлар да пайдаланды. 30 рет қайта баспадан шыққан «Муаллими әўўәл» Мысырда да сабақлық сыпатында қолланылды.</p><p>Шәкиртиниң жетискенликлерин көрген Исмаил Ғаспиралий оны Қырымдағы «Зинжирли» медресесине мирәт етти. Үш жылдан соң, 1896-жылы Аҳмад Ҳәдий Қазанға қайтып, муғаллимлик жумысын даўам еттирди. Ол жазған китаплардың жәми саны 1 миллион данадан асып кетти.</p><p>1906-жылы «Йолдиз» деген газетаға тийкар салды. Аҳмад Ҳәдий Қалалық думаға да сайланған. Бирақ, оның бәрше режелери мәмлекет басына большевиклер келиўи менен жоққа шықты. Оның үйи ҳәм дала ҳәўлиси тартып алынды. Бираз ўақыттан соң, муғаллимлик пенен шуғылланыўды да қадаған етип қойды. Бала-шағасын бағыў ушын Аҳмад Ҳәдийдей алым адам артелге китап түплеўши (саҳҳаф) болып жумысқа жайласты. Бир қанша китаплардың авторы болған алым 1941-жылы 28-июньда ақырет сапарына жол алды (қайтыс болды).</p><p>Аллаҳ оның ақыретин абат қылсын!</p></string>
    <string name="about_book">Бул китап шәриятымыз қағыйдалары әҳли сунна ўәл жәмәә, әсиресе ҳанафий мәзҳабы көрсетпелерине тийкарланып, түсиндирилген. Китап өткен әсир басларында, сол дәўирдеги тил өлшемлерине тән аңлатпа ҳәм ибаралар менен жазылған. Бундай түрде түсиндириў ҳәзирги күн оқыўшысының түсиниўине бираз қыйыншылық туўдырады, әлбетте. Сонлықтан автор тилин бираз болса да заманагөйлестириўге жүрексиндик.<p>Бул қолланба кең китап оқыўшылар жәмәәтине арналып, итиқад, әмел мәселелерин үйрениўде хызмет етеди, деген үмиттемиз.</p></string>
    <string name="book_title"><i>Қарақалпақ тилине аўдарған:</i>\n<b>Шамсуддин Баҳауддинов</b>\n\n<i>Жуўаплы редактор:</i>\n<b>Абдураҳман Идрисов</b>\n\n<i>Пикир билдириўши:</i>\n<b>Усманхан Алимов</b></string>
    <string name="about">Бул бағдарлама <b>TexnoPOS IT Mektebi</b> оқыўшысы <b>Хакимов Жақсыбай</b> тәрепинен дүзилди. Бағдарламаның таяр ҳалына келиўине шекем өз пикир усыныслары ҳәм хызметлери менен көмекши болған барлық әзийз инсанларға, хусусан, <b>Қарақалпақстан мусылманлары қазыяты</b> жәмәәтине, <b>Муҳаммад ал-Беруний Ислам билим журты</b> жәмәәтине шексиз миннетдаршылығымызды билдирип қаламыз. <p>Егер бул бағдарламадан қандай да жақсылық тапсаңыз Аллаҳ Тааладан, ал нуқсан тапсаңыз кәмийнә хызметкериңизден деп билгейсиз. Аллаҳ Тааланың Өзи туўры жолға басласын! Әмийн!</p></string>
    <string name="home">Бас бет</string>
    <string name="bookmarks">Сайландылар</string>
    <string name="search">Излеў</string>
    <string name="info">Мағлыўмат</string>
    <string name="bookmarks_caps">САЙЛАНДЫЛАР</string>
    <string name="search_caps">ИЗЛЕЎ</string>
    <string name="info_caps">МАҒЛЫЎМАТ</string>
    <string name="unitOne">БИРИНШИ\nБӨЛИМ</string>
    <string name="unitTwo">ЕКИНШИ\nБӨЛИМ</string>
    <string name="unitThree">ҮШИНШИ\nБӨЛИМ</string>
    <string name="unitFour">ТӨРТИНШИ\nБӨЛИМ</string>
    <string name="unitFive">БЕСИНШИ\nБӨЛИМ</string>
    <string name="duwa">ҲӘР ТҮРЛИ\nДУЎАЛАР</string>
</resources>