<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/unitFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/bookmarksFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_bookmarks_24"
        android:title="@string/bookmarks"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/infoFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/info"/>
</menu>