<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/topicSearchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/app_color"
        app:hintTextAppearance="@style/TextLabel"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomEnd="@dimen/margin_standard"
        app:boxCornerRadiusTopEnd="@dimen/margin_standard"
        app:boxCornerRadiusBottomStart="@dimen/margin_standard"
        app:boxCornerRadiusTopStart="@dimen/margin_standard"
        app:boxStrokeColor="@color/app_color"
        android:layout_margin="@dimen/margin_eight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topicSearchEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/search_by_topic"
            android:inputType="text"
            android:textSize="16dp"
            android:paddingVertical="12dp"
            android:drawableStart="@drawable/ic_outline_search_24"
            tools:ignore="SpUsage" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/cyrillicKeyPad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topicSearchBar"
        app:layout_constraintBottom_toTopOf="@id/topicsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="8">

        <TextView
            android:id="@+id/keyA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charA"
            android:textSize="18dp"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/keyG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charG"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/keyH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charH"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/keyQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charQ"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/keyN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charN"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/keyO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charO"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/keyU"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charU"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/keyW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charW"
            android:textSize="18dp"
            tools:ignore="SpUsage"
            android:textColor="?attr/iconTintColor"
            android:textAlignment="center"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topicsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cyrillicKeyPad"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_eight"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_topic"/>

</androidx.constraintlayout.widget.ConstraintLayout>
