<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/unitFragment">

    <fragment
        android:id="@+id/unitFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.unit.UnitFragment"
        android:label="@string/app_name_caps">

        <action
            android:id="@+id/action_unitFragment_to_topicFragment"
            app:destination="@id/topicFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_unitFragment_to_questionAnswerFragment"
            app:destination="@id/questionAnswerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.bookmarks.BookmarksFragment"
        android:label="@string/bookmarks_caps" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.search.SearchFragment"
        android:label="@string/search_caps">

        <action
            android:id="@+id/action_searchFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/searchResultFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.search.SearchResultFragment"
        android:label="@string/search_caps" >

        <argument
            android:name="questionText"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/questionAnswerFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.questionanswer.QuestionAnswerFragment">

        <argument
            android:name="topicId"
            android:defaultValue="1"
            app:argType="integer" />

        <argument
            android:name="topicName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/topicFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.topic.TopicFragment">

        <action
            android:id="@+id/action_topicFragment_to_questionAnswerFragment"
            app:destination="@id/questionAnswerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="unitId"
            android:defaultValue="1"
            app:argType="integer" />

        <argument
            android:name="unitName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/infoFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.info.InfoFragment"
        android:label="@string/info_caps" >

        <action
            android:id="@+id/action_infoFragment_to_aboutBookFragment"
            app:destination="@id/aboutBookFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_infoFragment_to_aboutAuthorFragment"
            app:destination="@id/aboutAuthorFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/aboutBookFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.info.AboutBookFragment"
        android:label="@string/about_book_title" />

    <fragment
        android:id="@+id/aboutAuthorFragment"
        android:name="uz.bismillah.ibadatiislamiya.ui.info.AboutAuthorFragment"
        android:label="@string/about_author_title" />
</navigation>